FusionDev Backup1/src/objects/SubLineItem__c.object
<CustomObject>
    <description>This object  is used as  sub items for OrderItems</description>
    <fields>
        <fullName>itemkeyid__c</fullName>
        <label>itemkeyid</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>laserimage__c</fullName>
        <label>laserimage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>productkey__c</fullName>
        <label>productkey</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ramsideloc__c</fullName>
        <label>ramsideloc</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>warpedpreview__c</fullName>
        <label>warpedpreview</label>
        <type>TextArea</type>
    </fields>
    <label>SubLineItem</label>
    <nameField>
        <label>SubLineItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SubLineItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>